Mise à jour du contexte

--- a/notebooks/P7_01_notebook.ipynb
+++ b/notebooks/P7_01_notebook.ipynb
@@ -95,11 +95,11 @@
         "id": "2huUKh5DzE9q"
       },
       "source": [
-        "L’entreprise souhaite **développer un modèle de scoring de la probabilité de défaut de paiement du client** pour étayer la décision d'accorder ou non un prêt à un client potentiel en s’appuyant sur des sources de données variées (données comportementales, données provenant d'autres institutions financières, etc.).\n",
+        "L’entreprise souhaite **mettre en œuvre un outil de “scoring crédit” pour calculer la probabilité** qu’un client rembourse son crédit, puis classifie la demande en crédit accordé ou refusé. Elle souhaite donc développer un **algorithme de classification** en s’appuyant sur des sources de données variées (données comportementales, données provenant d'autres institutions financières, etc.).\n",
         "\n",
         "De plus, les chargés de relation client ont fait remonter le fait que les clients sont de plus en plus demandeurs de **transparence** vis-à-vis des décisions d’octroi de crédit. Cette demande de transparence des clients va tout à fait dans le sens des valeurs que l’entreprise veut incarner.\n",
         "\n",
-        "Elle décide donc de développer un dashboard interactif pour que les chargés de relation client puissent à la fois expliquer de façon la plus transparente possible les décisions d’octroi de crédit, mais également permettre à leurs clients de disposer de leurs informations personnelles et de les explorer facilement. "
+        "**Prêt à dépenser** décide donc de **développer un dashboard interactif** pour que les chargés de relation client puissent à la fois expliquer de façon la plus transparente possible les décisions d’octroi de crédit, mais également permettre à leurs clients de disposer de leurs informations personnelles et de les explorer facilement. "
       ]
     },
     {
@@ -112,6 +112,15 @@
         "\n",
         "> Voici [les données](https://www.kaggle.com/c/home-credit-default-risk/data) dont vous aurez besoin pour réaliser le dashboard. Pour plus de simplicité, vous pouvez les télécharger à [cette adresse](https://s3-eu-west-1.amazonaws.com/static.oc-static.com/prod/courses/files/Parcours_data_scientist/Projet+-+Impl%C3%A9menter+un+mod%C3%A8le+de+scoring/Projet+Mise+en+prod+-+home-credit-default-risk.zip).\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0MnqDio15XJb"
+      },
+      "source": [
+        "> Il y a sûrement besoin de joindre les différentes tables entre elles."
       ]
     },
     {
@@ -136,7 +145,7 @@
         "\n",
         "1. Construire un modèle de scoring qui donnera une prédiction sur la probabilité de faillite d'un client de façon automatique.\n",
         "\n",
-        "2. Construire un dashboard interactif à destination des gestionnaires de la relation client permettant d'interpréter les prédictions faites par le modèle et d’améliorer la connaissance client des chargés de relation client."
+        "2. Construire un dashboard interactif à destination des gestionnaires de la relation client permettant d'interpréter les prédictions faites par le modèle, et d’améliorer la connaissance client des chargés de relation client."
       ]
     },
     {
@@ -153,19 +162,25 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "JtHXZ_mJ6DCi"
+      },
+      "source": [
+        "> L'idée est de focaliser sur l’élaboration du modèle, son optimisation et sa compréhension"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "0s3J-2jf2heM"
       },
       "source": [
-        "**Cahier des charges**\n",
+        "**Spécifications du dashboard**\n",
         "\n",
-        "**Michaël** m'a fourni un cahier des charges pour le dashboard interactif. \n",
+        "**Michaël** m'a fourni des spécifications pour le dashboard interactif. Celui-ci devra contenir au minimum les fonctionnalités suivantes :\n",
         "\n",
-        "Le dashboard interactif devra à minima contenir les fonctionnalités suivantes :\n",
-        "\n",
-        "*  Permettre de visualiser le score\n",
-        "*  Permettre d’interpréter ce score pour chaque client de façon intelligible pour une personne non experte en data science.\n",
-        "*  Permettre de visualiser des informations descriptives relatives à un client via un système de filtre.\n",
-        "*  Permettre de comparer les informations descriptives relatives à un client à l’ensemble des clients ou à un groupe de clients similaires."
+        "* Permettre de visualiser le score et l’interprétation de ce score pour chaque client de façon intelligible pour une personne non experte en data science.\n",
+        "* Permettre de visualiser des informations descriptives relatives à un client (via un système de filtre).\n",
+        "* Permettre de comparer les informations descriptives relatives à un client à l’ensemble des clients ou à un groupe de clients similaires."
       ]
     },
     {
@@ -198,18 +213,17 @@
         "id": "lflAN3LFq4oT"
       },
       "source": [
-        "*  Le **dashboard interactif** répondant au cahier des charges \n",
-        "précisé ci-dessus.\n",
-        "*  Un **dossier sur un outil de versioning de code** contenant :\n",
-        "  *  Le code de la modélisation (du prétraitement à la prédiction)\n",
-        "  *  Le code générant le dashboard\n",
-        "  *  Le code permettant de déployer le modèle sous forme d'API\n",
-        "*  Une **note méthodologique** décrivant :\n",
-        "  *  La méthodologie d'entraînement du modèle\n",
-        "  *  La fonction coût, l'algorithme d'optimisation et la métrique d'évaluation\n",
-        "  *  L’interprétabilité du modèle\n",
-        "  *  Les limites et les améliorations possibles\n",
-        "*  Un support de présentation pour la soutenance.\n",
+        "* Le dashboard interactif répondant aux spécifications ci-dessus et l’API de prédiction du score, déployées chacunes sur le cloud.\n",
+        "* Un dossier sur un outil de versioning de code contenant :\n",
+        "  * Le code de la modélisation (du prétraitement à la prédiction)\n",
+        "  * Le code générant le dashboard\n",
+        "  * Le code permettant de déployer le modèle sous forme d'API\n",
+        "* Une note méthodologique décrivant :\n",
+        "  * La méthodologie d'entraînement du modèle (2 pages maximum)\n",
+        "  * La fonction coût métier, l'algorithme d'optimisation et la métrique d'évaluation (1 page maximum)\n",
+        "  * L’interprétabilité globale et locale du modèle (1 page maximum)\n",
+        "  * Les limites et les améliorations possibles (1 page maximum)\n",
+        "* Un support de présentation pour la soutenance, détaillant le travail réalisé.\n",
         "\n"
       ]
     },
@@ -247,12 +261,18 @@
         "id": "N2p6Ube4PUI0"
       },
       "source": [
-        "* Rappel de la problématique et présentation du jeu de données **5 min** \n",
-        "* Explication de l’approche de modélisation **7 min** \n",
-        "* Présentation du dashboard **15 min** \n",
-        "* Questions et réponses. **5-10 min** \n",
+        "Pendant la soutenance, l’évaluateur jouera le rôle de Michaël, à qui je présente mon travail. \n",
         "\n",
-        "> J'ai **27 min** pour la présentation "
+        "* Présentation **20 minutes** \n",
+        "  * Rappel de la problématique et présentation du jeu de données **5 minutes**\n",
+        "  * Explication de l’approche de modélisation **10 minutes**\n",
+        "  * Présentation du dashboard **5 minutes**\n",
+        "* Discussion **5 minutes**\n",
+        "  * L’évaluateur, jouant le rôle de Michaël, me challengera sur mes choix. \n",
+        "* Débriefing **5 minutes**\n",
+        "  * À la fin de la soutenance, l'évaluateur arrêtera de jouer le rôle de Michaël pour me permettre de débriefer ensemble. \n",
+        "\n",
+        "> J'ai **20 min** pour la présentation "
       ]
     },
     {
@@ -278,10 +298,10 @@
         "***Compétences évaluées***\n",
         "\n",
         "* **Présenter son travail de modélisation à l'oral**\n",
-        "* **Déployer un modèle via une API dans le Web**\n",
-        "* **Utiliser un logiciel de version de code pour assurer l’intégration du modèle**\n",
+        "* **Réaliser un dashboard pour présenter son travail de modélisation**\n",
         "* **Rédiger une note méthodologique afin de communiquer sa démarche de modélisation**\n",
-        "* **Réaliser un dashboard pour présenter son travail de modélisation**"
+        "* **Utiliser un logiciel de version de code pour assurer l’intégration du modèle**\n",
+        "* **Déployer un modèle via une API dans le Web**"
       ]
     },
     {
